--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
   height: 20px;
   background: transparent;
   border-top-left-radius: 20px;
-  box-shadow: 0px -10px 0 0 var(--clr);
+  box-shadow: 0px -10px 0 0 var(--clr)
 }
 
 .navigation ul li:nth-child(1).active ~ .indicator {
